--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@duffel/api": "^1.24.1",
+    "@duffel/components": "^2.7.14",
     "axios": "^1.2.5",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
@@ -24,6 +25,7 @@
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "stripe": "^11.15.0"
   }
 }
